<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_background">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="#4e636e"
        android:orientation="vertical">

        <Button
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:background="@drawable/back_button"
            android:onClick="pairingclick" />

        <TextView
            android:id="@+id/biaoti_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/PariringCodeActivity_text_title"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>
<TextView
    android:textColor="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="15sp"
    android:text="@string/PariringCodeActivity_text_hint"
    android:layout_below="@+id/relativeLayout"
    android:layout_alignParentStart="true"
    android:id="@+id/textView6"
    android:layout_marginLeft="14dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/edittext_backgroound_shape"
        android:hint="@string/PariringCodeActivity_text_original_hint"
        android:textColorHint="@color/colorBlack"
        android:textSize="12sp"
        android:layout_marginLeft="97dp"
        android:padding="6dp"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:layout_marginTop="0dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/edittext_backgroound_shape"
        android:hint="@string/ChangePasswordActivity_text_new_hint"
        android:textColorHint="@color/colorBlack"
        android:textSize="12sp"
        android:layout_marginLeft="97dp"
        android:layout_below="@+id/editText"
        android:layout_marginTop="19dp"
        android:layout_alignEnd="@+id/editText"
        android:padding="6dp"
        android:text="@string/PariringCodeActivity_text_new_hint" />

    <EditText
        android:padding="6dp"
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/edittext_backgroound_shape"
        android:hint="@string/ChangePasswordActivity_text_new_hint_confirm"
        android:textColorHint="@color/colorBlack"
        android:textSize="12sp"
        android:layout_marginLeft="97dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:text="@string/PariringCodeActivity_text_new_hint_confirm" />
    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:textSize="14sp"
        android:text="@string/PariringCodeActivity_text_original"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="270dp"
        android:id="@+id/textView4"
        android:layout_above="@+id/editText2"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/ok_button_unable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="86dp"
        android:layout_below="@+id/editText3"
        android:onClick="pairingclick" />

    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:textSize="14sp"
        android:text="@string/PariringCodeActivity_text_new"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="270dp"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/editText2"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="5dp" />

    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:textSize="15sp"
        android:text="@string/ChangePasswordActivity_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="0dp"
        android:id="@+id/textView8"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:id="@+id/button2"
        android:background="@drawable/edittextrightdrawable"
        android:layout_alignTop="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:onClick="pairingclick" />

    <Button
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/button3"
        android:background="@drawable/edittextrightdrawable"
        android:layout_marginRight="10dp"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="10dp"
        android:onClick="pairingclick" />

    <Button
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/button4"
        android:background="@drawable/edittextrightdrawable"
        android:layout_marginRight="10dp"
        android:layout_alignTop="@+id/editText3"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="10dp"
        android:onClick="pairingclick" />

</RelativeLayout>