<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_background">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="#4e636e"
        android:orientation="vertical">

        <Button
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:background="@drawable/back_button" />

        <TextView
            android:id="@+id/biaoti_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Password of the lock"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/edittext_backgroound_shape"
        android:hint="@string/PariringCodeActivity_text_original_hint"
        android:textColorHint="@color/colorBlack"
        android:textSize="12sp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="97dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/edittext_backgroound_shape"
        android:hint="@string/ChangePasswordActivity_text_new_hint"
        android:textColorHint="@color/colorBlack"
        android:textSize="12sp"
        android:layout_marginLeft="97dp"
        android:layout_below="@+id/editText"
        android:layout_marginTop="19dp"
        android:layout_alignEnd="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/edittext_backgroound_shape"
        android:hint="@string/ChangePasswordActivity_text_new_hint_confirm"
        android:textColorHint="@color/colorBlack"
        android:textSize="12sp"
        android:layout_marginLeft="97dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />
    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:textSize="14sp"
        android:text="@string/ChangePasswordActivity_text_original"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="270dp"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView4" />

    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:textSize="14sp"
        android:text="@string/ChangePasswordActivity_text_new"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="270dp"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:textSize="15sp"
        android:text="@string/ChangePasswordActivity_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="0dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/editText3" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/ok_button_enable"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="181dp" />

</RelativeLayout>